# git-explorer-rs

./: .gitignore  Cargo.toml  README.md  commits.html  scripts.js
assets/js/: scripts.js  tailwind.min.js
assets/styles/: custom.css
src/: main.rs
templates/: commits.html  file.html
