[package]
name = "git"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "*"
tokio = { version = "1", features = ["full"] }
clap = "~3"
serde = { version = "*", features = ["derive"] }
tokio-util = { version = "*", features = ["io", "rt"] }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
axum-server = { version = "*", features = ["tls-rustls", "tokio-rustls"] }
rustls = "*"
rcgen = "*"
hostname = "*"
axum-extra = "*"
gix = "*"
